Update donor functions and models
